new proj/src/objects/GE_HQ_Country__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_ISO_Code__c</fullName>
        <externalId>true</externalId>
        <label>ISO Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Sanct_Cnty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sanctioned Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Threshold_Events__c</fullName>
        <label>Threshold Events</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Threshold_Gift__c</fullName>
        <label>Threshold Gift</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Thresholds_Gift_Aggregate__c</fullName>
        <label>Thresholds Gift Aggregate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tax_Comments__c</fullName>
        <label>ERP Tax Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_VAT_Name_for_Country__c</fullName>
        <label>ERP VAT Name for Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Country_Risk__c</fullName>
        <label>Finance Country Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_RCIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value will be checked for all the RCIS countries</description>
        <label>RCIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Welstream_Prefix__c</fullName>
        <label>Welstream Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tax_ID_Format__c</fullName>
        <label>Tax ID Format</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CPI_Score__c</fullName>
        <label>CPI Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ntl_Exc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Risk_Score_Override__c</fullName>
        <formula>IF(  NOT(ISNULL(GE_PRM_Risk_Score__c)), &quot;True&quot;, &quot;False&quot;)</formula>
        <label>Risk Score Override</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Risk_Score__c</fullName>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PW_BCLegal_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Courtesy Legal Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_CIS_Non_CIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC CIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_ITC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Risk_Type__c</fullName>
        <label>Business Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_VATApplicabl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_VATCharLimit__c</fullName>
        <label>VAT Character Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PW_VAT_Format__c</fullName>
        <label>VAT Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_ISO_Code__c</columns>
        <columns>GE_PW_Risk_Type__c</columns>
        <columns>GE_OG_Finance_Country_Risk__c</columns>
        <columns>GE_PW_VATApplicabl__c</columns>
        <columns>GE_PW_VAT_Format__c</columns>
        <columns>GE_PW_CIS_Non_CIS__c</columns>
        <columns>GE_PW_ITC__c</columns>
        <columns>GE_HQ_Sanct_Cnty__c</columns>
        <columns>GE_PW_VATCharLimit__c</columns>
        <columns>GE_OG_Tax_ID_Format__c</columns>
        <columns>GE_HQ_Is_Active__c</columns>
        <columns>GE_OG_ERP_Tax_Comments__c</columns>
        <columns>GE_OG_ERP_VAT_Name_for_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>